{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 58,
  "lineage": "4f173b8e-6198-ea55-b22d-58fbc3b8f280",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "tracker_app_web_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0718b4ac01274c8cb",
            "arn": "arn:aws:ec2:us-east-1:654654484434:instance/i-097e2cef48ca8e22a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec2-ecr-instance-profile",
            "id": "i-097e2cef48ca8e22a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Godson-kp",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-043119855a54b9c0d",
            "private_dns": "ip-10-0-1-20.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.20",
            "public_dns": "ec2-44-203-103-209.compute-1.amazonaws.com",
            "public_ip": "44.203.103.209",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-092e688e6b3bf6b61",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-045726a93981d960f",
            "tags": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "production-tracker-app-server",
              "Project": "task-tracker-app",
              "ProjectOwner": "Godson Nwaubani"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "production-tracker-app-server",
              "Project": "task-tracker-app",
              "ProjectOwner": "Godson Nwaubani"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-008a3cbeb2308e774"
            ]
          },
          "dependencies": [
            "aws_security_group.tracker_app_sg",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.ubuntu",
            "data.aws_iam_instance_profile.ecr_profile"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654484434:internet-gateway/igw-0c9059f6a9f90f2df",
            "id": "igw-0c9059f6a9f90f2df",
            "owner_id": "654654484434",
            "tags": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "production-igw",
              "Project": "task-tracker-app",
              "ProjectOwner": "Godson Nwaubani"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "production-igw",
              "Project": "task-tracker-app",
              "ProjectOwner": "Godson Nwaubani"
            },
            "vpc_id": "vpc-00fd883f79125345b"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654484434:route-table/rtb-028e9e8433fa4f7cc",
            "id": "rtb-028e9e8433fa4f7cc",
            "owner_id": "654654484434",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c9059f6a9f90f2df",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "production-public-rtb",
              "Project": "task-tracker-app",
              "ProjectOwner": "Godson Nwaubani"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "production-public-rtb",
              "Project": "task-tracker-app",
              "ProjectOwner": "Godson Nwaubani"
            },
            "timeouts": null,
            "vpc_id": "vpc-00fd883f79125345b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d13eed18a767b74c",
            "route_table_id": "rtb-028e9e8433fa4f7cc",
            "subnet_id": "subnet-045726a93981d960f"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tracker_app_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654484434:security-group/sg-008a3cbeb2308e774",
            "description": "Allow web traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-008a3cbeb2308e774",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "production-tracker-app-sg",
            "name_prefix": "",
            "owner_id": "654654484434",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "production-tracker-app-sg",
              "Project": "task-tracker-app",
              "ProjectOwner": "Godson Nwaubani"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "production-tracker-app-sg",
              "Project": "task-tracker-app",
              "ProjectOwner": "Godson Nwaubani"
            },
            "timeouts": null,
            "vpc_id": "vpc-00fd883f79125345b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654484434:subnet/subnet-045726a93981d960f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-045726a93981d960f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "654654484434",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "production-public-subnet",
              "Project": "task-tracker-app",
              "ProjectOwner": "Godson Nwaubani"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "production-public-subnet",
              "Project": "task-tracker-app",
              "ProjectOwner": "Godson Nwaubani"
            },
            "vpc_id": "vpc-00fd883f79125345b"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654484434:vpc/vpc-00fd883f79125345b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0dbcd034604287dd7",
            "default_route_table_id": "rtb-099b5ba2da3a9216e",
            "default_security_group_id": "sg-09b4aaf58838ef904",
            "dhcp_options_id": "dopt-0a140a4886d848b27",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00fd883f79125345b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-099b5ba2da3a9216e",
            "owner_id": "654654484434",
            "tags": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "production-vpc",
              "Project": "task-tracker-app",
              "ProjectOwner": "Godson Nwaubani"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "production-vpc",
              "Project": "task-tracker-app",
              "ProjectOwner": "Godson Nwaubani"
            }
          }
        }
      ]
    }
  ]
}